# django-simple-tenants

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  documentation.yml
demo/demo/: settings.py  urls.py
demo/polls/: admin.py  models.py  urls.py  views.py
demo/polls/migrations/: 0001_initial.py  0002_poll_file.py  0003_rename_subdomain_tenant_prefix.py
demo/polls/templates/: index.html
simple_tenants/: __init__.py  admin.py  conf.py  errors.py  exceptions.py  forms.py  managers.py  middleware.py  models.py  utils.py
tests/: test_add.py
